fix: link preview text not properly truncated (#1575)

--- a/storybook/stories/components/link-tooltip.css
+++ b/storybook/stories/components/link-tooltip.css
@@ -62,6 +62,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         font-size: 14px;
+        white-space: nowrap;
 
         &:hover {
           text-decoration: underline;
